pridan druhy ukol, upraven prvni

--- a/1.ipynb
+++ b/1.ipynb
@@ -16,25 +16,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 513,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Výsledek: 9503\n",
+      "Čas: 5.630000000422797e-05s\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "from time import process_time\n",
+    "import time\n",
     "\n",
     "a = [25, 45, 14, 35, 2, 6, 34]\n",
     "b = [36, 86, 93, 11, 26, 57, 78]\n",
     "\n",
-    "t = process_time()\n",
+    "t = time.perf_counter()\n",
     "\n",
     "def dot_product(a, b): \n",
     "    val = 0\n",
     "    for i, j in zip(a, b):\n",
     "        val += i * j\n",
     "    return val\n",
-    "\n",
-    "print(f\"Výsledek: {dot_product(a, b)}\\nČas: {process_time() - t}s\") "
+    "print(f\"Výsledek: {dot_product(a, b)}\\nČas: {time.perf_counter() - t}s\") "
    ]
   },
   {
@@ -46,16 +54,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 514,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Výsledek: 9503\n",
+      "Čas: 3.749999999769216e-05s\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([25, 45, 14, 35, 2, 6, 34])\n",
     "b = np.array([36, 86, 93, 11, 26, 57, 78])\n",
     "\n",
-    "t = process_time()\n",
+    "t = time.perf_counter()\n",
     "\n",
-    "print(f\"Výsledek: {a @ b}\\nČas: {process_time() - t}s\")"
+    "print(f\"Výsledek: {a @ b}\\nČas: {time.perf_counter() - t}s\")"
    ]
   },
   {
@@ -74,9 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 515,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Výsledek: 13.486090951778758\n",
+      "Čas: 0.0016778999999971234s\n"
+     ]
+    }
+   ],
    "source": [
     "# Pomocí Newtonových-Cotesových vzorců\n",
     "\n",
@@ -87,7 +113,7 @@
     "b = 10\n",
     "dx = 0.001\n",
     "\n",
-    "t = process_time()\n",
+    "t = time.perf_counter()\n",
     "\n",
     "n = int((b - a) // dx) + 1\n",
     "integral = f(a) + f(b)\n",
@@ -97,7 +123,7 @@
     "\n",
     "integral *= dx / 2\n",
     "\n",
-    "print(f\"Výsledek: {integral}\\nČas: {process_time() - t}s\")"
+    "print(f\"Výsledek: {integral}\\nČas: {time.perf_counter() - t}s\")"
    ]
   },
   {
@@ -109,19 +135,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 516,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Výsledek: 13.486090980950138\n",
+      "Čas: 5.8099999996841234e-05s\n"
+     ]
+    }
+   ],
    "source": [
     "import scipy.integrate as integrate\n",
     "\n",
     "def f(x): \n",
     "    return (x**2 - 30) / (x + 2)\n",
     "\n",
-    "t = process_time()\n",
+    "t = time.perf_counter()\n",
     "res = integrate.quad(f, a, b)\n",
     "\n",
-    "print(f\"Výsledek: {res[0]}\\nČas: {process_time() - t}s\")"
+    "print(f\"Výsledek: {res[0]}\\nČas: {time.perf_counter() - t}s\")"
    ]
   },
   {
@@ -140,9 +175,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 517,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Výsledek: 408\n",
+      "Čas: 6.0400000002402976e-05s\n"
+     ]
+    }
+   ],
    "source": [
     "def determinant(matrix, mul=1):\n",
     "    width = len(matrix)\n",
@@ -164,9 +208,9 @@
     "    return answer\n",
     "\n",
     "a = [[5, 3, 7, 7], [8, 10, 2, 6], [1, 4, 4, 2], [5, 8, 5, 7]]\n",
-    "t = process_time()\n",
+    "t = time.perf_counter()\n",
     "\n",
-    "print(f\"Výsledek: {determinant(a)}\\nČas: {process_time() - t}s\")"
+    "print(f\"Výsledek: {determinant(a)}\\nČas: {time.perf_counter() - t}s\")"
    ]
   },
   {
@@ -178,15 +222,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 518,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Výsledek: 407.9999999999999\n",
+      "Čas: 2.5700000001904755e-05s\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([[5, 3, 7, 7], [8, 10, 2, 6], [1, 4, 4, 2], [5, 8, 5, 7]])\n",
     "val = np.linalg.det(a)\n",
-    "t = process_time()\n",
+    "t = time.perf_counter()\n",
     "\n",
-    "print(f\"Výsledek: {val}\\nČas: {process_time() - t}s\")"
+    "print(f\"Výsledek: {val}\\nČas: {time.perf_counter() - t}s\")"
    ]
   },
   {
@@ -205,9 +258,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 519,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Výsledek:\n",
+      "[[7, 4, 8], [8, 6, 5], [9, 7, 3], [7, 6, 1]]\n",
+      "Čas: 2.83000000038669e-05s\n"
+     ]
+    }
+   ],
    "source": [
     "def transpose(matrix):\n",
     "    rows = len(matrix)\n",
@@ -224,9 +287,9 @@
     "    return matrix_n\n",
     "\n",
     "a = [[7, 8, 9, 7], [4, 6, 7, 6], [8, 5, 3, 1]]\n",
-    "t = process_time()\n",
+    "t = time.perf_counter()\n",
     "\n",
-    "print(f\"Výsledek:\\n{transpose(a)}\\nČas: {process_time() - t}s\")"
+    "print(f\"Výsledek:\\n{transpose(a)}\\nČas: {time.perf_counter() - t}s\")"
    ]
   },
   {
@@ -238,14 +301,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 520,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Výsledek:\n",
+      "[[7 4 8]\n",
+      " [8 6 5]\n",
+      " [9 7 3]\n",
+      " [7 6 1]]\n",
+      "Čas: 0.00012080000000480595s\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([[7, 8, 9, 7], [4, 6, 7, 6], [8, 5, 3, 1]])\n",
-    "t = process_time()\n",
+    "t = time.perf_counter()\n",
     "\n",
-    "print(f\"Výsledek:\\n{a.transpose()}\\nČas: {process_time() - t}s\")"
+    "print(f\"Výsledek:\\n{a.transpose()}\\nČas: {time.perf_counter() - t}s\")"
    ]
   },
   {
@@ -271,9 +347,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 521,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Výsledek:[(-6.898979485566356+0j), (2.8989794855663558+0j)]\n",
+      "Čas: 3.480000000166683e-05s\n"
+     ]
+    }
+   ],
    "source": [
     "import cmath\n",
     "\n",
@@ -283,9 +368,9 @@
     "    second_root = (-b + cmath.sqrt(D)) / (2 * a)\n",
     "    return [first_root, second_root]\n",
     "\n",
-    "t = process_time()\n",
+    "t = time.perf_counter()\n",
     "\n",
-    "print(f\"Výsledek:{quadratic_equation(1, 4, -20)}\\nČas: {process_time() - t}s\")"
+    "print(f\"Výsledek:{quadratic_equation(1, 4, -20)}\\nČas: {time.perf_counter() - t}s\")"
    ]
   },
   {
@@ -297,15 +382,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 522,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Výsledek: [-6.89897949  2.89897949]\n",
+      "Čas: 0.00033100000000274576s\n"
+     ]
+    }
+   ],
    "source": [
     "coeff = [1, 4, -20]\n",
-    "t = process_time()\n",
+    "t = time.perf_counter()\n",
     "sol = np.roots(coeff)\n",
     "\n",
-    "print(f\"Výsledek: {sol}\\nČas: {process_time() - t}s\")"
+    "print(f\"Výsledek: {sol}\\nČas: {time.perf_counter() - t}s\")"
    ]
   }
  ],
