--- a/2.ipynb
+++ b/2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
     }
    ],
    "source": [
-    "# Počet respodentů na edukativní systém\n",
+    "# Počet respondentů na edukativní systém\n",
     "\n",
     "plt.figure(figsize=(5, 5))\n",
     "count = dataset[\"Education Level\"].value_counts()\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
     }
    ],
    "source": [
-    "# Úroveň adaptivity respondetů na online výuku\n",
+    "# Úroveň adaptivity respondentů na online výuku\n",
     "\n",
     "adapt_levels = dataset.groupby('Adaptivity Level').size()\n",
     "fig = plt.figure()\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
     }
    ],
    "source": [
-    "# Počet respodentů na typ využívané sítě\n",
+    "# Počet respondentů na typ využívané sítě\n",
     "\n",
     "group = dataset.groupby([\"Network Type\", \"Internet Type\"])['Internet Type'].count().to_frame()\n",
     "group.columns = ['Usage']\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
