--- a/2.ipynb
+++ b/2.ipynb
@@ -4,12 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Vizualizace dat**"
+    "## **2) Vizualizace dat**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "dataset = pd.read_csv('students_adaptability_level_online_education.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Věková kategorie respondentů"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -26,14 +46,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "dataset = pd.read_csv('students_adaptability_level_online_education.csv')\n",
-    "\n",
-    "# Věková kategorie respondentů\n",
-    "\n",
     "graph = plt.figure(figsize=(10, 30))\n",
     "graph = plt.subplot(4, 1, 1)\n",
     "graph = sns.countplot(x=\"Age\", data=dataset)\n",
@@ -42,8 +54,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Počet respondentů na edukativní systém"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -60,8 +79,6 @@
     }
    ],
    "source": [
-    "# Počet respondentů na edukativní systém\n",
-    "\n",
     "plt.figure(figsize=(5, 5))\n",
     "count = dataset[\"Education Level\"].value_counts()\n",
     "plt.scatter([\"School\", \"University\", \"College\"], [count[0], count[1], count[2]], color=[\"green\", \"orange\", \"red\"])\n",
@@ -69,8 +86,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Úroveň adaptivity respondentů na online výuku"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -85,8 +109,6 @@
     }
    ],
    "source": [
-    "# Úroveň adaptivity respondentů na online výuku\n",
-    "\n",
     "adapt_levels = dataset.groupby('Adaptivity Level').size()\n",
     "fig = plt.figure()\n",
     "fig.set_facecolor('white')\n",
@@ -98,8 +120,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Počet respondentů na typ využívané sítě"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -116,16 +145,21 @@
     }
    ],
    "source": [
-    "# Počet respondentů na typ využívané sítě\n",
-    "\n",
     "group = dataset.groupby([\"Network Type\", \"Internet Type\"])['Internet Type'].count().to_frame()\n",
     "group.columns = ['Usage']\n",
     "ax = group.sort_values(by='Usage').plot(kind=\"line\", figsize=(10, 5), color=\"crimson\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Konkrétní skupiny respondentů a jejich reakce na online výuku"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -142,8 +176,6 @@
     }
    ],
    "source": [
-    "# Konkrétní skupiny respondentů a jejich reakce na online výuku\n",
-    "\n",
     "group = dataset.groupby(['Gender', 'Age', 'Adaptivity Level'])['Adaptivity Level'].count().to_frame()\n",
     "group.columns = ['Adaptivity count']\n",
     "ax = group.sort_values(by='Adaptivity count', ascending=True).plot(kind=\"barh\", figsize=(10, 15), title=\"Adaptivity\", color=\"purple\")"
