--- a/9.ipynb
+++ b/9.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "source": [
     "#### První funkce\n",
-    "<img src=\"./9_imgs/f.png\" />"
+    "![Funkce](9_imgs/f.png)"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "metadata": {},
    "source": [
     "#### Druhá funkce\n",
-    "<img src=\"./9_imgs/g.png\" />"
+    "![Funkce](9_imgs/g.png)"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "metadata": {},
    "source": [
     "#### Třetí funkce\n",
-    "<img src=\"./9_imgs/h.png\" />"
+    "![Funkce](9_imgs/h.png)"
    ]
   },
   {
