--- a/5.ipynb
+++ b/5.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bisekce (půlení intervalu)"
+    "### Uzavřená: Bisekce (půlení intervalu)"
    ]
   },
   {
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Newtonova metoda (metoda tečen)"
+    "### Otevřená: Newtonova metoda (metoda tečen)"
    ]
   },
   {
