--- a/2.ipynb
+++ b/2.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Věková kategorie respondentů"
+    "### Věková kategorie respondentů"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Počet respondentů na edukativní systém"
+    "### Počet respondentů na edukativní systém"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Úroveň adaptivity respondentů na online výuku"
+    "### Úroveň adaptivity respondentů na online výuku"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Počet respondentů na typ využívané sítě"
+    "### Počet respondentů na typ využívané sítě"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Konkrétní skupiny respondentů a jejich reakce na online výuku"
+    "### Konkrétní skupiny respondentů a jejich reakce na online výuku"
    ]
   },
   {
