--- a/9.ipynb
+++ b/9.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### První funkce\n",
+    "### První funkce\n",
     "![Funkce](9_imgs/f.png)"
    ]
   },
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Druhá funkce\n",
+    "### Druhá funkce\n",
     "![Funkce](9_imgs/g.png)"
    ]
   },
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Třetí funkce\n",
+    "### Třetí funkce\n",
     "![Funkce](9_imgs/h.png)"
    ]
   },
