--- a/1.ipynb
+++ b/1.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Python"
+    "#### Python"
    ]
   },
   {
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### NumPy"
+    "#### NumPy"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Python"
+    "#### Python"
    ]
   },
   {
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### SciPy"
+    "#### SciPy"
    ]
   },
   {
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Python"
+    "#### Python"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### NumPy"
+    "#### NumPy"
    ]
   },
   {
@@ -260,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Python"
+    "#### Python"
    ]
   },
   {
@@ -303,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### NumPy"
+    "#### NumPy"
    ]
   },
   {
@@ -342,14 +342,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### *Rovnice: x^2 + 4x - 20 = 0*"
+    "#### **Rovnice: x^2 + 4x - 20 = 0**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Python"
+    "#### Python"
    ]
   },
   {
@@ -384,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### NumPy"
+    "#### NumPy"
    ]
   },
   {
